FIXED - Sticky Section Broken on Resize

--- a/squelettes/css/style.less
+++ b/squelettes/css/style.less
@@ -207,6 +207,10 @@ a:hover {
     background-color: #232323;
   }
 
+  &.sticky {
+    word-break: break-word;
+  }
+
   &.sticky .container-fluid-scroller > .container-fluid:first-child {
     &[current=false] .current-only {
       width: 0;
